tinyc/test/bad/struct-as-bool-or.c
struct s
{
    int x;
};

int main()
{
    struct s s;
    s || s;
    return 0;
}
